--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   },
   "dependencies": {
     "@aws-amplify/ui-react-liveness": "^3.4.1",
+    "@aws-sdk/client-dynamodb": "^3.862.0",
     "@aws-sdk/client-rekognition": "^3.848.0",
+    "@aws-sdk/client-s3": "^3.645.0",
     "aws-amplify": "^6.15.3",
     "aws-sdk": "^2.1692.0",
     "cors": "^2.8.5",
