--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "dev": "nodemon server.js"
   },
   "dependencies": {
     "@aws-amplify/ui-react-liveness": "^3.4.1",
@@ -17,7 +18,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "nodemon": "^3.1.10"
   },
   "devDependencies": {
     "@aws-amplify/backend": "^1.16.1",
