--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
-    AWS_ACCESS_KEY_ID=YOUR_AWS_ACCESS_KEY_ID
-    AWS_SECRET_ACCESS_KEY= YOUR_AWS_SECRET
-    AWS_REGION= us-east-1
-    S3_BUCKET= YOUR_S3_BUCKET_NAME
-    REKOGNITION_COLLECTION= YOUR_REKOGNITION_COLLECTION_NAME
+AWS_ACCESS_KEY_ID=YOUR_AWS_ACCESS_KEY_ID
+AWS_SECRET_ACCESS_KEY= YOUR_AWS_SECRET
+AWS_REGION= us-east-1
+S3_BUCKET= YOUR_S3_BUCKET_NAME
+REKOGNITION_COLLECTION= YOUR_REKOGNITION_COLLECTION_NAME
+DYNAMO_TABLE= YOUR_DYNAMO_TABLE_NAME
