--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,10 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@aws-amplify/ui-react": "^6.11.2",
+    "@aws-amplify/ui-react-liveness": "^3.4.2",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.1",
     "@mui/material": "^5.18.0",
+    "aws-amplify": "^6.15.5",
     "axios": "^1.11.0",
     "framer-motion": "^12.23.12",
     "react": "^18.2.0",
